# Quorum

./: .env.example  .gitignore  AGENTS.md  AI_ONBOARDING_PROMPT.md  ATLAS-MASTER-ALIGNMENT.md  ATLAS-QUICKSTART.md  CLAUDE.md  Dockerfile  PROJECT_STRUCTURE.md  QUORUM-FUTURE-PLAN.md  QUORUM-MASTER-ALIGNMENT.md  QUORUM-QUICKSTART.md  README.md  TESTING-INTERNAL.md  TESTING.md  atlas.config.example.json  atlas.config.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  quorum.config.example.json  quorum.config.json.template  requirements.txt
agents/: atlas-backend-architect.md  atlas-backend-validator.md  atlas-classifier.md  atlas-critic.md  atlas-design-architect.md  atlas-design-validator.md  atlas-frontend-builder.md  atlas-integration.md  atlas-nervous-system.md  atlas-orchestrator.md  atlas-scaling.md  atlas-testing.md  quorum-approver.md  quorum-ba-watcher.md  quorum-backend-architect.md  quorum-backend-builder.md  quorum-backend-validator.md  quorum-changelog.md  quorum-chat.md  quorum-classifier.md  quorum-coder.md  quorum-cost-advisor.md  quorum-critic.md  quorum-deps.md  quorum-design-architect.md  quorum-design-validator.md  quorum-env-manager.md  quorum-frontend-builder.md  quorum-integration.md  quorum-monitor.md  quorum-nervous-system.md  quorum-orchestrator.md  quorum-planner.md  quorum-scale-advisor.md  quorum-scaling.md  quorum-security.md  quorum-story-writer.md  quorum-summarizer.md  quorum-task-manager.md  quorum-testing.md
apps/atlas-console/: app.json  package.json
commands/: atlas-enhance.md  atlas-new.md  atlas-rollback.md  atlas-status.md  atlas-sync.md  quorum-enhance.md  quorum-new.md  quorum-rollback.md  quorum-status.md  quorum-sync.md
docs/: teams-setup.md
qorum/: .env.example  .gitignore  __main__.py  agent_harness.py  config.py  doctor.py  main.py  requirements.txt
qorum-plans/: README.md  phase-00-consolidation.md  phase-01-foundation-hardening.md  phase-02-provider-agnostic-ai.md  phase-03-tool-agent-harness.md  phase-04-bot-core-telegram.md  phase-05-chat-ingestion-boundary.md  phase-06-classifier-locator.md  phase-07-plan-approval.md  phase-08-execution-git.md  phase-09-build-test-gate.md  phase-10-realtime-visibility.md  phase-11-board-front-door.md  phase-12-teams-adapter.md  phase-13-whatsapp-slack-discord.md  phase-14-multidev-enterprise.md
scripts/: setup.ts  tsconfig.json
(+197 files in other folders)
